5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1594_1800.log
== TEST (2019-03-19 16:17:16) 
-- CODE:
print (round (a**2 + b**2+c**2//a+b+c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (round (a**2 + b**2+c**2//a+b+c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:17:40) 
-- CODE:
print (round (a**2 + b**2+c**2//a+b+c,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (round (a**2 + b**2+c**2//a+b+c,6))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:17:43) 
-- CODE:
print (round (a**2 + b**2+c**2//a+b+c,6))
-- EXECUTION TIME:
0.153625
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 1, in <module>
    print (round (a**2 + b**2+c**2//a+b+c,6))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:18:02) 
-- CODE:
print (round (a**2 + b**2 + c**2 //a + b + c,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (round (a**2 + b**2 + c**2 //a + b + c,6))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:18:10) 
-- CODE:
print (round (a**2 + b**2 + c**2 //a + b + c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (round (a**2 + b**2 + c**2 //a + b + c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:18:12) 
-- CODE:
print (round (a**2 + b**2 + c**2 //a + b + c))
-- EXECUTION TIME:
0.21553
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 1, in <module>
    print (round (a**2 + b**2 + c**2 //a + b + c))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:18:25) 
-- CODE:
print (round (a**2 + b**2 + c**2 /a + b + c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (round (a**2 + b**2 + c**2 /a + b + c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:18:27) 
-- CODE:
print (round (a**2 + b**2 + c**2 /a + b + c))
-- EXECUTION TIME:
0.141873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 1, in <module>
    print (round (a**2 + b**2 + c**2 /a + b + c))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:18:30) 
-- CODE:
print (round (a**2 + b**2 + c**2 / a + b + c))
-- EXECUTION TIME:
0.136237
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 1, in <module>
    print (round (a**2 + b**2 + c**2 / a + b + c))
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:18:31) 
-- CODE:
print (round (a**2 + b**2 + c**2 / a + b + c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (round (a**2 + b**2 + c**2 / a + b + c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:18:53) 
-- CODE:
print(round(a**2 + b**2 + c**2 / a + b + c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(a**2 + b**2 + c**2 / a + b + c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:21:54) 
-- CODE:
print(round a*a + b*b + c*c)
-- ERROR:
File "XXXX", line 1
    print(round a*a + b*b + c*c)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:35:58) 
-- CODE:
x = int(input("Digite um numero:))
s = x + 2
print(s)		  
-- ERROR:
File "XXXX", line 1
    x = int(input("Digite um numero:))
                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:36:33) 
-- CODE:
x = int(input("Digite um numero:"))
s = x + 2
print(s)		  
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:55:49) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=(a**2 + b**2 + c**2 // a + b + c)
print(s)		  
-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:56:30) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=(a**2 + b**2 + c**2 // a + b + c)
print(s,6)		  
-- OUTPUT:
1125 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:56:58) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=(a**2 + b**2 + c**2 // a + b + c)
print(round,6)		  
-- OUTPUT:
<built-in function round> 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:57:55) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=(a**2 + b**2 + c**2 // a + b + c)
print(round(s,6))		  
-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:58:25) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=(a**2 + b**2 + c**2 // a + b + c)
print(round(s,6))		  
-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:58:47) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=(a**2 + b**2 + c**2 // a + b + c)
print(round(s,6))		  
-- EXECUTION TIME:
0.131603
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1125
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
216496
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22622
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:05:17) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=(a**2 + b**2 + c**2 / a + b + c)
print(round(s,6))		  
-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:05:40) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=(a**2 + b**2 + c**2 / a + b + c)
print(round(s,6))		  
-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:05:59) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=(a**2 + b**2 + c**2 / a + b + c)
print(round(s,6))		  
-- EXECUTION TIME:
0.265286
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1125.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
216496.276596
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22622.044444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:44:24) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=(a**2 + b**2 + c**2 / a + b + c)
print(round(s,7))		  
-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 12:44:40) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=(a**2 + b**2 + c**2 / a + b + c)
print(round(s,7))		  
-- EXECUTION TIME:
0.127335
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1125.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
216496.2765957
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22622.0444444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:45:14) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c)
print(round(s,7))		 

-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:45:27) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c)
print(round(s,7))		 

-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 12:45:41) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c)
print(round(s,7))		 

-- EXECUTION TIME:
0.162384
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1125
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
216496
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22622
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:46:30) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c)
print(round(s,7))		 p
-- ERROR:
File "XXXX", line 5
    print(round(s,7))		 p
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:46:31) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c)
print(round(s,7))		 p
-- ERROR:
File "XXXX", line 5
    print(round(s,7))		 p
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:46:37) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c)
print(round(s,7))		 
-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 12:46:56) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c)
print(round(s,7))		 
-- EXECUTION TIME:
0.119323
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1125
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
216496
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22622
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:47:05) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c)
print(round(s,7))		 
-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:47:47) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c)
print(round(s,6))		 
-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:47:47) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c)
print(round(s,6))		 
-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:48:32) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c) = 0
print(round(s,7))		 
-- ERROR:
File "XXXX", line 4
    s=( a**2 + b**2 + c**2 // a + b + c) = 0
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:48:55) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c) = 0
print(round(s,7))		 
-- ERROR:
File "XXXX", line 4
    s=( a**2 + b**2 + c**2 // a + b + c) = 0
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:49:06) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 // a + b + c) 
print(round(s,7))		 
-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:49:38) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 / a + b + c) =0
print(round(s,7))		 
-- ERROR:
File "XXXX", line 4
    s=( a**2 + b**2 + c**2 / a + b + c) =0
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:49:43) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 / a + b + c) =0
print(round(s,7))		 
-- ERROR:
File "XXXX", line 4
    s=( a**2 + b**2 + c**2 / a + b + c) =0
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:50:49) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 ) / ( a + b + c ) = 0
print(round(s,7))		 
-- ERROR:
File "XXXX", line 4
    s=( a**2 + b**2 + c**2 ) / ( a + b + c ) = 0
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 12:50:52) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 ) / ( a + b + c ) = 0
print(round(s,7))		 
-- EXECUTION TIME:
0.148823
-- ERROR:
  File "/home/codebench/codes/1594/1800/main.py", line 4
    s=( a**2 + b**2 + c**2 ) / ( a + b + c ) = 0
     ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 12:51:00) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 ) / ( a + b + c ) 
print(round(s,7))		 
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 12:51:09) 
-- CODE:
a = int(input("Digite um numero de a:"))
b = int(input("digite um numero de b:"))
c = int(input("digite um numero de c:"))
s=( a**2 + b**2 + c**2 ) / ( a + b + c ) 
print(round(s,7))		 
-- EXECUTION TIME:
0.18812
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
